# podofo-font-tools

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  USAGE.md  issue.md  vcpkg.json
scripts/: build.ps1  run.ps1  setup.ps1
src/font-classifier/: CMakeLists.txt  main.cpp
